fixed form errors shifting

--- a/src/components/contactUs/form/_form.scss
+++ b/src/components/contactUs/form/_form.scss
@@ -1,19 +1,23 @@
 @import "../../../scss/global/colors";
 @import "../../../scss/global/mixins";
+@import "../../../scss/global/brakepoints";
 .form_wrap {
   margin-top: 30px;
   padding: 10px 20px 30px 20px;
   border: 2px solid $color1;
   border-radius: 15px;
+  margin: auto;
+  background-color: $color11;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: $color11;
+
   @include media(">=desktop") {
     margin-top: 0;
     width: 585px;
     padding: 40px 20px 60px 20px;
   }
+
   button {
     @include button(200px);
 
@@ -29,28 +33,36 @@
       background-color: $color6;
     }
   }
-
-  input,
-  textarea {
-    margin-top: 30px;
+  .input_wrap,
+  .textarea_wrap {
     width: 100%;
-    height: 45px;
-    border-radius: 5px;
-    border: 1px solid $color9;
-    padding: 10px 15px;
-    &:focus {
-      outline: none;
-      border-color: black !important; // used important property here
+    position: relative;
+    input,
+    textarea {
+      margin-top: 30px;
+      width: 100%;
+      height: 45px;
+      border-radius: 5px;
+      border: 1px solid $color9;
+      padding: 10px 15px;
+      &:focus {
+        outline: none;
+        border-color: black !important; // used important property here
+      }
+      &::placeholder {
+        color: $color13;
+      }
     }
-    &::placeholder {
-      color: rgb(170, 170, 170);
+    textarea {
+      height: 80px;
     }
-  }
-  textarea {
-    height: 80px;
-  }
 
-  .text_error {
-    color: $color5;
+    .text_error {
+      position: absolute;
+      bottom: -20px;
+      color: $color5;
+      font-size: 15px;
+      line-height: 16px;
+    }
   }
 }
